--- a/main.html
+++ b/main.html
@@ -10,9 +10,10 @@
    <ul>
    <li><a href="getalbumsgeneric.php" target="main">Album</a></li>
    <li><a href="getartists.php" target="main">Artist</a></li>
-   <li><a href="getmusicsources.php" target="main">Source</a></li>
-   <li><a href="getplaylist.php" target="main">List</a></li>
+   <li><a href="getmusicsources.php" target="main">Music Sources</a></li>
+   <li><a href="getmoviesources.php" target="main">Video Sources</a></li>
    <li><a href="remote.php" target="main">Remote</a></li>
+   <li><a href="getplaylist.php" target="main">Playlist</a></li>
    </ul>
   </div>
  </div>
