--- a/main.html
+++ b/main.html
@@ -8,12 +8,14 @@
  <div id="header">
   <div id="utility">
    <ul>
-   <li><a href="getalbumsgeneric.php" target="main">Album</a></li>
-   <li><a href="getartists.php" target="main">Artist</a></li>
+   <li><a href="getalbumsgeneric.php" target="main">Music Albums</a></li>
+   <li><a href="getartists.php" target="main">Music Artists</a></li>
    <li><a href="getmusicsources.php" target="main">Music Sources</a></li>
+   <li><a href="getmovies.php" target="main">Movies</a></li>
+   <li><a href="gettvshows.php" target="main">TV Shows</a></li>
    <li><a href="getmoviesources.php" target="main">Video Sources</a></li>
-   <li><a href="remote.php" target="main">Remote</a></li>
-   <li><a href="getplaylist.php" target="main">Playlist</a></li>
+   <li><a href="remote.php" target="main">Remote Control</a></li>
+   <li><a href="getplaylist.php" target="main">Show Playlist</a></li>
    </ul>
   </div>
  </div>
